<resources>
    <string name="app_name">URSkin</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="gone">Gone</string>
    <string name="letusknow">Let us know your skin\nconcern</string>
    <string name="welcome">Welcome</string>
    <string name="welcome1">This application aims to predict 10 skin diseases that are commonly occur in the society</string>
    <string name="welcome2">URSkin is one of the applications that are still under development by C241-PS48 team as the final project capstone at Bangkit Academy 2024 Batch 1</string>
    <string name="welcome3">* Please check yourself to nearest clinic if the condition is serious to get more accurate result, by using this app you agree with this statement</string>
    <string name="start">Lets Start</string>
    <string name="login1">Log into\nyour account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="google">\tLog in with Google</string>
    <string name="dont">Dont have an account? <u>Signup here</u></string>
    <string name="create">Create Account</string>
    <string name="name">Full name</string>
    <string name="already">Already have account? <u>Click here</u></string>
    <string name="success">Registration Success!! Lets check your skin</string>
    <string name="failed">Registration Failed!! Please check your email and password. </string>
    <string name="conti">Continue</string>
    <string name="sorry">Sorry</string>
    <string name="photo">Photo Profile</string>
    <string name="name_paja">Farhan Faza</string>
    <string name="email_paja">frhnfza@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="date">Date</string>
    <string name="start_predict">Start Your Predict</string>
    <string name="gallery_only">You only predict images from the gallery</string>
    <string name="upload">Upload Image</string>
    <string name="predict">Predict</string>
    <string name="notes">Notes</string>
    <string name="failed_image_classifier">Image classifier is failed</string>
    <string name="result">Result Predict</string>
    <string name="description">Desctiption</string>
    <string name="try_again">Try Again</string>
    <string name="goto_article">Go to article</string>
    <string name="desc">* Please kindly check our article, the article include definition, causes, type and treatment. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_source">Siloam Hospitals</string>
    <string name="article_tittle">Eczema - Causes, Symptoms and Treatments</string>
    <string name="article_desc">Eczema is a condition when inflammation occurs on the skin, characterized by the appearance of itchy red rashes. However, children experience this condition more often.
Eczema is often diagnosed during childhood. Regardless, it does not rule out the likelihood that this condition can only be detected during adulthood. Before diagnosing eczema, doctors will record the patient’s symptoms and medical history by asking some questions.</string>
    <string-array name="data_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="data_source">
        <item>Siloam Hospital</item>
        <item>Siloam Hospital</item>
        <item>Alodokter</item>
        <item>Siloam Hospital</item>
        <item>Mayo Clinic</item>
        <item>Cedars Sinai</item>
        <item>Siloam Hospital</item>
        <item>Cleveland Clinic</item>
        <item>Alodokter</item>
        <item>Halodoc</item>
    </string-array>
    <string-array name="data_tittle">
        <item>Eczema - Causes, Symptoms and Treatments</item>
        <item>Melanoma Skin Cancer - Causes, Symptoms and Treatment</item>
        <item>Atopic - Definition, Causes and Treatment</item>
        <item>Basal Cell Carcinoma - Causes, Symptoms and Treatments</item>
        <item>Melanocytic Nevi - Causes and Treatments</item>
        <item>Benign Keratosis-like Lesions - Treatments</item>
        <item>Psoriasis Lichen Planus - Definition, Type and Treatments</item>
        <item>Seborrheic Keratoses and other Benign Tumors - Treatments</item>
        <item>Tinea Ringworm Candidiasis and other Fungal Infections - Treatments</item>
        <item>Warts Molluscum and other Viral Infections</item>
    </string-array>
</resources>