<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.signup.SignupActivity">
    <ScrollView
        android:id="@+id/rdv60rfq40d"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/cr40bfffffbf9"
        android:paddingTop="105dp"
        android:paddingBottom="143dp"
        android:paddingHorizontal="48dp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rkbny91o1eh"
                android:textColor="#B65629"
                android:textSize="32sp"
                android:layout_marginBottom="43dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/create"
                />
            <LinearLayout
                android:id="@+id/rm0r6vnkjrca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cr9bfffdeee5"
                android:paddingVertical="21dp"
                android:paddingHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fullnameTV"
                    android:textColor="#C18E7F"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/name"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rr6eeu1vn72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cr9bfffdeee5"
                android:padding="21dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/emailTV"
                    android:textColor="#C18E7F"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/email"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rtxrbxdzkdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cr9bfffdeee5"
                android:padding="21dp"
                android:layout_marginBottom="21dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/PasswordTV"
                    android:textColor="#C18E7F"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rnkzf8sl80hc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cr9bffef9771"
                android:paddingVertical="22dp"
                android:paddingHorizontal="101dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/r7de3grzdla9"
                    android:textColor="#C06944"
                    android:textSize="14sp"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/signup"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/rixec8hqqorr"
                android:textColor="#343434"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/already"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>