<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.predict.PredictActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/ToolBarStyle.Event"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:background="@color/white"
            app:title="@string/start_predict"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/tv_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/notes"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/gallery_only"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_notes"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_preview"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/vector_upload"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/rounded24"
                app:layout_constraintTop_toBottomOf="@id/tv_only"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_upload"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_primary"
                android:text="@string/upload"
                android:textColor="@color/moderate_orang"
                android:layout_marginTop="32dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_preview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_predict"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_secondary"
                android:text="@string/predict"
                android:textColor="@color/moderate_orang"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_upload" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>