<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".view.onboarding.OnboardingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rv_welcome"
                android:layout_width="303dp"
                android:layout_height="336dp">
                <ImageView
                    android:id="@+id/img_welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vectorwelcome"
                    android:scaleType="fitStart"
                    android:layout_marginTop="64dp"
                    android:contentDescription="@string/welcome"/>


            </RelativeLayout>

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="136dp"
                android:layout_marginEnd="-28dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/rv_welcome"/>

            <LinearLayout
                android:id="@+id/ly_welcome1"
                android:layout_width="134dp"
                android:layout_height="3dp"
                android:layout_marginEnd="-28dp"
                android:background="@drawable/cr6bff9e9e9e"
                app:layout_constraintEnd_toEndOf="@id/rv_welcome"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome1"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="-48dp"
                app:layout_constraintEnd_toEndOf="@id/rv_welcome"
                app:layout_constraintTop_toBottomOf="@id/ly_welcome1"/>

            <LinearLayout
                android:id="@+id/ly_welcome2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="17dp"
                android:layout_marginTop="128dp"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/cr6bfffeeee6"
                app:layout_constraintTop_toBottomOf="@id/rv_welcome">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome2"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/plus_jakarta_sans_regular"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_primary"
                android:text="@string/start"
                android:textSize="16sp"
                android:textColor="@color/moderate_orang"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:textAllCaps="false"
                android:layout_marginTop="22dp"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_welcome2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome3"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:layout_marginHorizontal="50dp"
                app:layout_constraintTop_toBottomOf="@id/btn_start"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>