<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.profile.ProfileActivity">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/ToolBarStyle.Event"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp">

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textSize="16sp"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:textColor="@color/moderate_orang"
                android:paddingTop="84dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgProfile"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:shapeAppearanceOverlay="@style/rounded24"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/tvProfile"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:textColor="@color/moderate_orang"
                app:layout_constraintTop_toBottomOf="@id/imgProfile"/>

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_secondary"
                app:layout_constraintTop_toBottomOf="@id/tvName">

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:textSize="16sp"
                    android:text="@string/name_paja"
                    android:fontFamily="@font/plus_jakarta_sans_italic"
                    android:textColor="@color/moderate_orang"
                    android:layout_margin="16sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/email"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:textColor="@color/moderate_orang"
                app:layout_constraintTop_toBottomOf="@id/nameLayout"/>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_secondary"
                app:layout_constraintTop_toBottomOf="@id/tvEmail">

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:textSize="16sp"
                    android:text="@string/email_paja"
                    android:fontFamily="@font/plus_jakarta_sans_italic"
                    android:textColor="@color/moderate_orang"
                    android:layout_margin="16dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/moderate_orang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>